--- a/book.toml
+++ b/book.toml
@@ -3,6 +3,6 @@ authors = ["terkwood"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Terkwood Farms"
+title = "Terkwood"
 [output.html]
 theme = "src/theme"
