--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - cargo install-update -a
 
 script:
-  - mdbook build . && mdbook test .
+  - mdbook build . && mdbook test . && cp CNAME book/.
 
 deploy:
   provider: pages
